--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <style>
        </style>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/zara.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/Zara.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
