fixed index titles and data

--- a/public/index.html
+++ b/public/index.html
@@ -7,14 +7,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
-      name="description"
-      content="Web site created using create-react-app"
+      name="RKD412 Portfolio"
+      content="Personal portfolio site for web developer Robert K. Davis based in Pittsburgh, PA.
+       Offers a sample of projects being worked on and methods to contact him as well."
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
 
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-
-    <title>RKD412 Portfolio</title>
+    <title>Robert's Portfolio</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
