--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
        Offers a sample of projects being worked on and methods to contact him as well."
     />
 
-    <title>Robert's Portfolio</title>
+    <title>Robert's Portfolio Page</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
