Fixed meta description

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
-      name="RKD412 Portfolio"
+      name="description"
       content="Personal portfolio site for web developer Robert K. Davis based in Pittsburgh, PA.
        Offers a sample of projects being worked on and methods to contact him as well."
     />
